--- a/Seaborn-Visualization.ipynb
+++ b/Seaborn-Visualization.ipynb
@@ -431,10 +431,6 @@
      ]
     }
    ],
-   "source": [
-    "sns.histplot(df.total_bill,hue=)\n",
-    "plt.show()"
-   ]
   },
   {
    "cell_type": "code",
@@ -454,7 +450,7 @@
     }
    ],
    "source": [
-    "sns.distplot(df.total_bill,hue=df.sex)\n",
+    "sns.distplot(df.total_bill)\n",
     "plt.show()"
    ]
   },
@@ -477,7 +473,7 @@
     }
    ],
    "source": [
-    "sns.countplot(x='day',data=df,hue='sex')\n",
+    "sns.countplot(x='day',data=df,hue=df.sex)\n",
     "plt.show()"
    ]
   },
